<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Inicio">

    <!-- TODO: Update blank fragment layout -->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <LinearLayout
            android:id="@+id/infoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroud_main"
            android:orientation="vertical"
            android:paddingBottom="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/ttvTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:text="@string/title"
                android:textColor="#fff"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvsubTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"

                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/sick"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:lineHeight="23sp"
                android:text="@string/parrafo"
                android:textColor="#fff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <Button
                    android:id="@+id/btnCall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_red"
                    android:drawableStart="@drawable/ic_call"
                    android:drawableLeft="@drawable/ic_call"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/call"
                    android:textColor="#fff"
                    android:textSize="13sp"
                    tools:ignore="ButtonStyle" />

                <Button

                    android:id="@+id/btnMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_blue"
                    android:drawableStart="@drawable/ic_message"
                    android:drawableLeft="@drawable/ic_message"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"

                    android:text="@string/message"
                    android:textColor="#fff"
                    android:textSize="13sp"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvPrevenciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/prevenciones"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoContainer" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPagerImageSlider"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginBottom="16dp"
            android:paddingStart="70dp"
            android:paddingEnd="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPrevenciones" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>